Send email page alignment issue corrected

--- a/style.css
+++ b/style.css
@@ -52,23 +52,6 @@
   border-radius: 0!important;
 }
 
-.btn-dark {
-  --bs-btn-color: #fff;
-  --bs-btn-bg: #212529;
-  --bs-btn-border-color: #212529;
-  --bs-btn-hover-color: #fff;
-  --bs-btn-hover-bg: #db0a06;
-  --bs-btn-hover-border-color: #db0a06;
-  --bs-btn-focus-shadow-rgb: 66,70,73;
-  --bs-btn-active-color: #fff;
-  --bs-btn-active-bg: #4d5154;
-  --bs-btn-active-border-color: #373b3e;
-  --bs-btn-active-shadow: inset 0 3px 5px rgba(0,0,0,.125);
-  --bs-btn-disabled-color: #fff;
-  --bs-btn-disabled-bg: #212529;
-  --bs-btn-disabled-border-color: #212529;
-}
-
 
 
 
@@ -134,4 +117,61 @@
 .fa-linkedin {
   background: #08090b;
   color: white;
+}
+
+
+
+.input-group{
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  margin-top: 30px;
+}
+
+.input-group label{
+  top: 20px;
+  position: absolute;
+  transition: .1s ease-in-out;
+}
+
+.input-group input, textarea{
+  border: none;
+  padding: 7px;
+  margin-top: 5px;
+  outline: none;
+  border-bottom:1px solid white;
+  background:#7303f3 ;
+  caret-color:white ;
+  color: white;
+  font-size: 20px;
+}
+
+.input-group input:focus ~ label,
+.input-group input:valid ~ label{
+  top: -10px;
+  font-size: 12px;
+}
+
+.input-group textarea:focus ~ label,
+.input-group textarea:valid ~ label{
+  top: -20px;
+  font-size: 12px;
+}
+
+.send-section{
+  text-align:end
+}
+
+.send-button{
+  background-color: white;
+  color: #7303f3;
+  font-weight: 500;
+  padding: 10px 15px;
+  margin-top: 40px;
+  cursor: pointer;
+  border: none;
+}
+
+.send-button:hover{
+  box-shadow: 6px 6px 6px #180133;
 }
